--- a/html_Files/home_page.html
+++ b/html_Files/home_page.html
@@ -28,16 +28,16 @@
       </ul>
     </header>
   </div>
+  
   <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item">
-        <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg> -->
-        <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" alt="" width="100%" height="60%">
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>Example headline.</h1>
@@ -46,9 +46,8 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item active">
-        <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg> -->
-       <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" alt="" width="100%" height="60%">
+      <div class="carousel-item">
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
         <div class="container">
           <div class="carousel-caption">
             <h1>Another example headline.</h1>
@@ -57,9 +56,8 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg> -->
-        <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" alt="" width="100%" height="60%">
+      <div class="carousel-item active">
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
         <div class="container">
           <div class="carousel-caption text-end">
             <h1>One more for good measure.</h1>
@@ -78,7 +76,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
+  
   <div class="container marketing">
     <!-- START THE FEATURETTES -->
 
@@ -109,6 +107,43 @@
     <!-- /END THE FEATURETTES -->
 
   </div>
+  <div class="container">
+  <div class="custom-cards"><h2 class="pb-2 border-bottom  mt-5 mb-5 container">Custom cards</h2></div>
+  <div class="card-grid">
+  <div class="card text-bg-dark card_sel">
+    <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card text-bg-dark card_sel">
+    <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card text-bg-dark card_sel">
+    <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card text-bg-dark ">
+    <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+</div>
 
 <div class="custom-cards"><h2 class="pb-2 border-bottom  mt-5 mb-5 container">Custom cards</h2></div>
 
@@ -198,46 +233,50 @@
 </div>
 <div class="custom-cards"><h2 class="pb-2 border-bottom  mt-5 mb-5 container">Custom cards</h2></div>
 
-<div class="container">
-<div class="row row-cols-1 row-cols-md-2 g-4 ">
-  <div class="col">
-    <div class="card">
-      <img src="" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+<div class="custom-container">
+  <div class="custom-row">
+    <div class="custom-col">
+      <div class="custom-card">
+        <img src="/assets/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" class="custom-card-image" alt="...">
+        <div class="custom-card-body">
+          <h5 class="custom-card-title">Card title</h5>
+          <p class="custom-card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <div class="custom-col">
+      <div class="custom-card">
+        <img src="/assets/img/example-image.jpg" class="custom-card-image" alt="...">
+        <div class="custom-card-body">
+          <h5 class="custom-card-title">Card title</h5>
+          <p class="custom-card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+    <div class="custom-col">
+      <div class="custom-card">
+        <img src="/assests/img/camping-on-top-of-the-mountain-during-sunset-free-photo.webp" class="custom-card-image" alt="...">
+        <div class="custom-card-body">
+          <h5 class="custom-card-title">Card title</h5>
+          <p class="custom-card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <div class="custom-col">
+      <div class="custom-card">
+        <img src="/assets/img/example-image.jpg" class="custom-card-image" alt="...">
+        <div class="custom-card-body">
+          <h5 class="custom-card-title">Card title</h5>
+          <p class="custom-card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
-</div>
+
+
+
+
 <div class="container">
   <footer class="py-5">
     <div class="row">
